fix overflow in carousel on mobile

--- a/web/src/assets/styles/components/_quotes.scss
+++ b/web/src/assets/styles/components/_quotes.scss
@@ -2,10 +2,8 @@
   @include media-breakpoint-up(sm) {
     height: 60vh;
   }
-  .carousel__viewport {
-    @include media-breakpoint-down(sm) {
-      overflow: visible;
-    }
+  carousel {
+    background-color: $smoke;
   }
 }
 
